[gd_scene load_steps=13 format=3 uid="uid://dlawg30cmcjnk"]

[ext_resource type="Texture2D" uid="uid://brx0lmqujo6wh" path="res://Game Screen Textures/PC.png" id="1_5826x"]
[ext_resource type="Script" path="res://quiz.gd" id="1_ug43l"]
[ext_resource type="Theme" uid="uid://5xp7u7pxrsif" path="res://Button Textures/handwritten.tres" id="2_asfmb"]
[ext_resource type="Theme" uid="uid://cjm7euikya7xy" path="res://PC Windows.tres" id="4_rqgbc"]
[ext_resource type="LabelSettings" uid="uid://cbwhg5t5iktxy" path="res://PC LABELS.tres" id="5_7le83"]
[ext_resource type="Texture2D" uid="uid://c3ki28d3jcaw0" path="res://Button Textures/Submit.png" id="7_begla"]
[ext_resource type="Texture2D" uid="uid://c47yht5s1xjgr" path="res://Button Textures/SubmitClicked.png" id="8_e6p1w"]
[ext_resource type="Texture2D" uid="uid://pbgv3bsiy8at" path="res://Game Screen Textures/sound1.png" id="9_qsvi1"]
[ext_resource type="Texture2D" uid="uid://lfuy2jggnma5" path="res://Game Screen Textures/sound2.png" id="10_ixi4i"]
[ext_resource type="Texture2D" uid="uid://bbuvamw5ok8yi" path="res://Button Textures/reference.png" id="11_nsotf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jbqpq"]
bg_color = Color(0, 0, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="SpriteFrames" id="SpriteFrames_xy2pf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_qsvi1")
}, {
"duration": 1.0,
"texture": ExtResource("10_ixi4i")
}],
"loop": true,
"name": &"phone ring",
"speed": 5.0
}]

[node name="Quiz" type="Node2D"]
texture_repeat = 1
script = ExtResource("1_ug43l")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1846.0
offset_bottom = 1159.0
texture = ExtResource("1_5826x")
metadata/_edit_lock_ = true

[node name="StickyNote" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 1385.0
offset_top = 98.0
offset_right = 1571.0
offset_bottom = 253.0
rotation = -0.208426
focus_mode = 0
theme = ExtResource("2_asfmb")
text = "Welcome to 
the team!
		-Ted"
flat = true
clip_text = true
language = "en"
metadata/_edit_lock_ = true

[node name="QuizWindow" type="PanelContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 416.0
offset_top = 160.0
offset_right = 1066.0
offset_bottom = 812.0
theme = ExtResource("4_rqgbc")
metadata/_edit_lock_ = true

[node name="WindowHeader" type="Panel" parent="TextureRect/QuizWindow"]
custom_minimum_size = Vector2(0, 24.375)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_jbqpq")

[node name="WindowName" type="Label" parent="TextureRect/QuizWindow/WindowHeader"]
layout_mode = 0
offset_left = 11.0
offset_top = 4.0
offset_right = 132.0
offset_bottom = 28.0
text = "S.E.S.A.M.E."
label_settings = ExtResource("5_7le83")

[node name="QuitButton" type="Button" parent="TextureRect/QuizWindow/WindowHeader"]
layout_mode = 0
offset_left = 625.0
offset_top = 4.0
offset_right = 640.0
offset_bottom = 20.0
theme = ExtResource("4_rqgbc")
text = "X"
text_overrun_behavior = 1
clip_text = true

[node name="QuestionInstructions" type="Label" parent="TextureRect/QuizWindow"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("4_rqgbc")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "

   Answer the question to the best of your knowledge. Check the Reference if you need help!"

[node name="QuestionCore" type="Panel" parent="TextureRect/QuizWindow"]
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 6.03

[node name="Question" type="RichTextLabel" parent="TextureRect/QuizWindow/QuestionCore"]
layout_mode = 0
offset_left = 21.0
offset_top = -238.0
offset_right = 624.0
offset_bottom = 38.0
theme = ExtResource("4_rqgbc")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
autowrap_mode = 2

[node name="Answers" type="ItemList" parent="TextureRect/QuizWindow/QuestionCore"]
layout_mode = 0
offset_left = 21.0
offset_top = -62.0
offset_right = 625.0
offset_bottom = 225.0
theme = ExtResource("4_rqgbc")
theme_override_constants/v_separation = 23
theme_override_font_sizes/font_size = 20
allow_search = false
max_text_lines = 3
auto_height = true
text_overrun_behavior = 4
item_count = 4
fixed_column_width = 1160
icon_scale = 0.15
item_0/text = "A1"
item_1/text = "A2"
item_2/text = "A3"
item_3/text = "A4"

[node name="RetryButton" type="Button" parent="TextureRect/QuizWindow/QuestionCore"]
layout_mode = 0
offset_left = 277.0
offset_top = -14.0
offset_right = 381.0
offset_bottom = 26.0
theme_override_font_sizes/font_size = 27
text = "Retry"

[node name="Submission" type="Panel" parent="TextureRect/QuizWindow"]
layout_mode = 2
size_flags_vertical = 8
size_flags_stretch_ratio = 2.49

[node name="Submit" type="TextureButton" parent="TextureRect/QuizWindow/Submission"]
layout_mode = 0
offset_left = 543.0
offset_top = -31.0
offset_right = 734.0
offset_bottom = 33.0
scale = Vector2(0.477504, 0.477504)
texture_normal = ExtResource("7_begla")
texture_pressed = ExtResource("8_e6p1w")

[node name="ResponseWindow" type="PanelContainer" parent="TextureRect"]
visible = false
layout_mode = 2
offset_left = 455.0
offset_top = 290.0
offset_right = 1036.0
offset_bottom = 657.0
theme = ExtResource("4_rqgbc")

[node name="ResponseHeader" type="Panel" parent="TextureRect/ResponseWindow"]
custom_minimum_size = Vector2(0, 24.375)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_jbqpq")

[node name="ResponseName" type="Label" parent="TextureRect/ResponseWindow/ResponseHeader"]
layout_mode = 0
offset_left = 11.0
offset_top = 4.0
offset_right = 132.0
offset_bottom = 28.0
text = "Question Result"
label_settings = ExtResource("5_7le83")

[node name="ResponseCore" type="Panel" parent="TextureRect/ResponseWindow"]
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 6.03

[node name="ResponseFeedback" type="RichTextLabel" parent="TextureRect/ResponseWindow/ResponseCore"]
layout_mode = 0
offset_left = 47.0
offset_top = -129.0
offset_right = 650.0
offset_bottom = 147.0
scale = Vector2(0.81599, 0.787228)
theme = ExtResource("4_rqgbc")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
text = "Question Feedback"
autowrap_mode = 2

[node name="Confirm" type="Button" parent="TextureRect/ResponseWindow/ResponseCore"]
layout_mode = 0
offset_left = 225.0
offset_top = 126.0
offset_right = 329.0
offset_bottom = 166.0
theme_override_font_sizes/font_size = 27
text = "Continue"

[node name="ReferenceButton" type="TextureButton" parent="."]
offset_left = -7.0
offset_top = 422.0
offset_right = 311.0
offset_bottom = 1327.0
rotation = -0.138954
scale = Vector2(0.513778, 0.513778)
texture_normal = ExtResource("11_nsotf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1220, 663)
sprite_frames = SubResource("SpriteFrames_xy2pf")
animation = &"phone ring"

[connection signal="pressed" from="TextureRect/StickyNote" to="." method="_on_sticky_note_pressed"]
[connection signal="pressed" from="TextureRect/QuizWindow/WindowHeader/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="item_selected" from="TextureRect/QuizWindow/QuestionCore/Answers" to="." method="_on_answers_item_selected"]
[connection signal="pressed" from="TextureRect/QuizWindow/QuestionCore/RetryButton" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="TextureRect/QuizWindow/Submission/Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="TextureRect/ResponseWindow/ResponseCore/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="ReferenceButton" to="." method="_on_reference_button_pressed"]
